# praxis-cadcam

./: .gitignore  BOUNDARY_CONTRACTS.md  CMakeLists.txt  CROSS_REPO_CONTRACT_LOCK.md  DEPLOYMENT_LIFECYCLE.md  backup.ps1  building.md  testing.md
.github/workflows/: ci.yml
contracts/: compute-digest.js  mirror-schema-sync.js  package-lock.json  package.json  sync-mirror.js  validate-schemas.js  verify-mirror-sync.js
contracts/schemas/: capability-profile.schema.json  machine-definition.schema.json  manifest.schema.json
engine/: .gitignore  CMakeLists.txt  README.md
engine/include/: FailureMessages.hpp  Inspection.hpp  InteractionEmit.hpp  InteractionPublic.hpp  OCCTInspector.hpp  Reference.hpp  Selector.hpp  SelectorException.hpp  SelectorResolver.hpp  SemanticTypes.hpp
engine/include/praxis/: ArtifactSchema.hpp  CanonicalFormat.hpp  Intent.hpp  IntentRouter.hpp  MicroPlanHistory.hpp  PatchParser.hpp  PlanHistory.hpp  PlanParser.hpp  Report.hpp
engine/scripts/: smoke.sh  test_caching.sh  test_kernel.sh
engine/src/: CanonicalFormat.cpp  Inspection.cpp  IntentRouter.cpp  InteractionEmit.cpp  InteractionPublic.cpp  OCCTInspector.cpp  Reference.cpp  Report.cpp  Selector.cpp  SelectorParser.cpp  SelectorResolver.cpp  intent.hpp  main.cpp
engine/src/artifacts/: ArtifactSchema.cpp
engine/src/cache/: ExecutionCache.cpp  ExecutionCache.hpp  HashContext.hpp  KernelOpHasher.cpp  KernelOpHasher.hpp  OpCache.cpp  OpCache.hpp
engine/src/commands/: ArtifactCommandCommon.hpp  BundleCreateCommand.cpp  ExportCapabilityProfileCommand.cpp  ExportMachineDefinitionCommand.cpp  InspectArtifactCommand.cpp  InspectCommand.cpp  ParseSelectorCommand.cpp  PatchCommand.cpp  PlanCommand.cpp  ResolveCommand.cpp  ResolveSelectorCommand.cpp  SelectCommand.cpp  ValidateCommand.cpp
engine/src/intents/: AttachFaceToFace.cpp  BuildFromRecipe.cpp  BuildFromRecipe.hpp  CreateBox.cpp  ExtractBodies.cpp  GenerateMachine3AxisVMC.cpp  HealAndNormalize.cpp  InspectAssembly.cpp
engine/src/kernel/: KernelOps.cpp  KernelOps.hpp  KernelVersion.cpp  KernelVersion.hpp  ShapeHandle.cpp  ShapeHandle.hpp  ShapeHandleInternal.hpp  StepIO.cpp  StepIO.hpp  StlIO.cpp  StlIO.hpp
engine/src/kinematics/: KinematicLoader.cpp  KinematicLoader.hpp  KinematicTypes.cpp  KinematicTypes.hpp  KinematicValidator.cpp  KinematicValidator.hpp
engine/src/plan/: ExecutionGraph.cpp  ExecutionGraph.hpp  MicroPlanHistory.cpp  PatchParser.cpp  PlanHistory.cpp  PlanParser.cpp
engine/src/reasoning/: ReasoningEngine.cpp  ReasoningEngine.hpp  ReasoningTypes.hpp
engine/src/recipe/: RecipeExecutor.cpp  RecipeExecutor.hpp  RecipeTypes.cpp  RecipeTypes.hpp  RecipeValidator.cpp  RecipeValidator.hpp
engine/tests/: praxis_test_paths.hpp
engine/tests/artifact_lifecycle/: CMakeLists.txt  test_artifact_lifecycle.cpp
engine/tests/determinism/: README.md  TEST_IMPROVEMENTS.md  test_stable_id_integrity.ps1  test_stable_ids.ps1
engine/tests/fixtures/: box.step  multi_body.step
engine/tests/fixtures/artifact/: bad-version-pkm.json  fanuc-4x-vmc.pkm.json  sample-pkm.json  semantic-invalid-capability-profile.json  semantic-invalid-machine-definition.json  semantic-invalid-manifest-duplicate-paths.json
engine/tests/hardening/: CMakeLists.txt  test_byte_identity.cpp  test_canonical_format.cpp  test_hardening_a.cpp  test_json_escaping.cpp  test_json_lint.cpp  test_report_canonical.cpp  test_selectable_ids.cpp
engine/tests/kernel/: CMakeLists.txt  test_cache.cpp  test_cache_concurrent.cpp  test_cache_flags.cpp  test_cache_integrity.cpp  test_cache_orphan_cleanup.cpp  test_cache_stats_prune.cpp  test_execution_graph.cpp  test_expression_eval.cpp  test_kernel_ops.cpp  test_op_cache.cpp  test_op_cache_integration.cpp  test_op_hash.cpp  test_pkm_loader.cpp  test_pkm_validator.cpp  test_plan_hash.cpp  test_reasoning_engine.cpp  test_recipe_composition.cpp  test_recipe_executor.cpp  test_recipe_pkm_validation.cpp  test_recipe_validator.cpp
engine/tests/phase_c4/: CMakeLists.txt  test_selector_parse.cpp
engine/tests/phase_c5/: CMakeLists.txt  test_selector_resolve.cpp
engine/tests/plan/: CMakeLists.txt  test_plan_determinism.cpp  test_plan_history.cpp
engine/tests/sprint10/: README.md  test_sprint10_validation.cpp
engine/tests/sprint11/: CMakeLists.txt  README.md  report_emission_path.md  test_determinism.cpp  test_preview_discovery.cpp  test_report_emission.cpp  test_selection_integration.cpp
engine/tests/sprint12/: CMakeLists.txt  TestHarness.cpp  TestHarness.hpp  debug_attach.cpp  test_attach_face_to_face.cpp  test_determinism.cpp  test_e2e_attach_face_to_face.cpp  test_e2e_attach_gate.cpp  test_e2e_attach_infra.cpp  test_e2e_plan_accumulation.cpp  test_negative_taxonomy.cpp  test_plan_accumulation.cpp
engine/tests/sprint7/: CMakeLists.txt  FakeGeometry.hpp  README.md  test_occt_compliance.cpp  test_occt_multibody.cpp
engine/tests/sprint7/e2e/: test_e2e_change_detection.cpp  test_e2e_round_trip.cpp  test_provenance.cpp
engine/tests/sprint7/kernel_compliance/: test_enumeration_stability.cpp  test_forbidden_apis.cpp  test_inspection_consistency.cpp
engine/tests/sprint7/negative/: test_negative_cases.cpp
engine/tests/sprint7/reference_model/: test_contract_versioning.cpp  test_json_codec.cpp  test_reference_roundtrip.cpp  test_reference_serialization.cpp  test_resolution.cpp
engine/tests/sprint7/selector_grammar/: CMakeLists.txt  test_cardinality.cpp  test_filters.cpp  test_filters_impl.cpp  test_selector_determinism.cpp  test_selector_parsing.cpp
engine/tests/sprint8/: CMakeLists.txt  test_sprint8_e2e.cpp
recipes/: README.md
recipes/static/: basic_3axis_mill.authoring.plan.json  basic_3axis_mill.pkm  basic_3axis_mill.plan.json  basic_3axis_mill.recipe.json
recipes/test/: add_node_test.json  bad_override.json  base_plate.json  circular_a.json  circular_b.json  collision_test.json  composed_machine.json  has_kinematics.json  inches_fragment.json  include_kinematics_test.json  invalid_body.json  namespace_test.json  override_test.json  parametric_expressions.json  (+6 more)
scripts/: extract_from_praxis.ps1
src/: main.cpp
(+16 files in other folders)
